[package]
name = "slock"
version = "0.1.0"
authors = ["Brandon Dyer <BrandonDyer64@gmail.com>"]
edition = "2018"
description = "An async mutex that never deadlocks."
readme = "README.md"
repository = "https://github.com/BrokenLamp/slock-rs"
license = "MIT"
keywords = ["mutex", "smart", "lock", "async"]
categories = ["asynchronous", "concurrency", "memory-management", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"

[dev-dependencies]
lazy_static = "1.4"
