[package]
authors = ["Brandon Dyer <BrandonDyer64@gmail.com>"]
categories = ["asynchronous", "concurrency", "memory-management", "rust-patterns"]
description = "An async mutex that never deadlocks."
edition = "2021"
keywords = ["mutex", "smart", "lock", "async"]
license = "MIT"
name = "slock"
readme = "README.md"
repository = "https://github.com/BrokenLamp/slock-rs"
version = "0.2.1"

[dependencies]
tokio = {version = "1.22", features = ["sync", "time", "rt", "macros"]}

[dev-dependencies]
lazy_static = "1.4"
